--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -1,1 +1,123 @@
-<p>game works!</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>dab dab dab dab dab dab dab dab dab dab if you like fortnite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">  
+
+</head>
+
+<body>
+    <div id="gamecontent">
+        <div class="player2 hand">
+            <div class="cardholderwrap">
+                <div class="cardholder"></div>
+            </div>
+            <div class="namefield"></div>
+            <div class="stiche"></div>
+        </div>
+        <div id="innergamecontent">
+            <div class="player3 hand">
+                <div class="cardholderwrap">
+                    <div class="cardholder"></div>
+                </div>
+                <div class="namefield"></div>
+                <div class="stiche"></div>
+            </div>
+            <div id="table">
+                <div id="jassmatwrap">
+                    <div id="jassmatborder">
+                        <div id="jassmat">
+                            <div id="matcardwrap"></div>
+                            <div class="turnindicator" style="color: transparent;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="player1 hand">
+                <div class="cardholderwrap">
+                    <div class="cardholder"></div>
+                </div>
+                <div class="namefield"></div>
+                <div class="stiche"></div>
+            </div>
+        </div>
+        <div class="player0 hand">
+            <div class="cardholderwrap">
+                <div class="cardholder"></div>
+            </div>
+            <div class="namefield"></div>
+            <div class="stiche"></div>
+        </div>
+
+    </div>
+
+    <div id="gui">
+    <div id="top-right-button-wrapper">
+        <div class="toggle-last-stich">
+        </div>
+        <div class="toggle-scoreboard">
+            Ok so I hate homework and you wanna know why? DO YOU WANNA KNOW WHY? Because homework is work at home. And guess what? GUESS WHAT? My mom won't let me play Minecraft until I finish my homework. SHE WON'T LET ME PLAY MINECRAFT! This is atrocious, because Jack and Nathaniel are online and I can't play with them, and then when I get online they're done. THEIR MOM LETS THEM PLAY MINECRAFT BEFORE HOMEWORK! I hate it so much. I HATE IT! And one time, ohhhh this one time, she caught me playing Minecraft before homework. You know what she did? YOU KNOW WHAT SHE DID? She took away my Xbox for a week. 7 WHOLE DAYS! SHE'S THE WORST MOM EVER! I said, "Mom, let me play! I just crafted my first shovel!" And she didn't care. She did not care. She just hit the stupid off button on the TV. SHE JUST TURNED THE TV OFF AND I LOST MY SHOVEL! I hate homework, and I hate my mom. Ugh.
+        </div>
+    </div>
+
+        <div id="trumpf"></div>
+        <div class="pop-up-window-container" id="score">
+            <div class="pop-up-window" id="score-window">
+                <div class="title-2">Scoreboard</div> <br>
+                <table class="scoretable">
+                    <thead>
+                        
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+
+        
+        <div class="pop-up-window-container" id="last-stich">
+            <div class="pop-up-window" id="last-stich-window">
+                <div class="title-2">Last Stich<br><br></div> 
+                <div class="stichtable">
+                </div>
+            </div>
+        </div>
+
+        <div class="pop-up-window-container" id="diff">
+            <div class="pop-up-window" id="diff-window">
+                <div class="slidercontainer">
+                    <div id="slider-value">40</div>
+                    <input id="slider" type="range" min="0" max="157" step="1" value="40">
+                </div>
+                <div class="button diff-go">Go!</div>
+            </div>
+        </div>
+
+        <div class="pop-up-window-container" id="trumpf-container">
+            <div class="pop-up-window" id="trumpf-window">
+                <div class="info-field title-2">Choose a trumpf!</div><br>
+                <div id="trumpf-window-buttons"></div>
+            </div>
+        </div>
+
+        <div class="pop-up-window-container" id="lobby-container">
+            <div class="pop-up-window" id="lobby-window">
+                <div class="info-field">
+                    <span class="title-2">Waiting For Players</span><br><br>
+                    <div id="waiting-player-container"></div>
+                </div>
+                <select class="game-type-selector select">
+                    <option class="select-option" value="differenzler">Differenzler</option>
+                    <option class="select-option" value="schieber">Schieber</option>
+                </select>
+                <div class="button lobby-startgame">Start Game</div><br>
+                <div class="button reload-page">Reload</div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
