show only main component by default

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -65,7 +65,7 @@
     </div>
 
         <div id="trumpf"></div>
-        <div class="pop-up-window-container" id="score">
+        <div class="pop-up-window-container" id="score" style="display: none;">
             <div class="pop-up-window" id="score-window">
                 <div class="title-2">Scoreboard</div> <br>
                 <table class="scoretable">
@@ -78,7 +78,7 @@
         </div>
 
         
-        <div class="pop-up-window-container" id="last-stich">
+        <div class="pop-up-window-container" id="last-stich" style="display: none;">
             <div class="pop-up-window" id="last-stich-window">
                 <div class="title-2">Last Stich<br><br></div> 
                 <div class="stichtable">
@@ -86,7 +86,7 @@
             </div>
         </div>
 
-        <div class="pop-up-window-container" id="diff">
+        <div class="pop-up-window-container" id="diff" style="display: none;">
             <div class="pop-up-window" id="diff-window">
                 <div class="slidercontainer">
                     <div id="slider-value">40</div>
@@ -96,14 +96,14 @@
             </div>
         </div>
 
-        <div class="pop-up-window-container" id="trumpf-container">
+        <div class="pop-up-window-container" id="trumpf-container" style="display: none;">
             <div class="pop-up-window" id="trumpf-window">
                 <div class="info-field title-2">Choose a trumpf!</div><br>
                 <div id="trumpf-window-buttons"></div>
             </div>
         </div>
 
-        <div class="pop-up-window-container" id="lobby-container">
+        <div class="pop-up-window-container" id="lobby-container" >
             <div class="pop-up-window" id="lobby-window">
                 <div class="info-field">
                     <span class="title-2">Waiting For Players</span><br><br>
