--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -6,7 +6,7 @@
     <title>dab dab dab dab dab dab dab dab dab dab if you like fortnite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 </head>
 
@@ -31,7 +31,11 @@
                 <div id="jassmatwrap">
                     <div id="jassmatborder">
                         <div id="jassmat">
-                            <div id="matcardwrap"></div>
+                            <div id="matcardwrap">
+                                <div class="card unselectable roesle neun player3" style="">
+                                    <div class="cardimg"></div>
+                                </div>
+                            </div>
                             <div class="turnindicator" style="color: transparent;"></div>
                         </div>
                     </div>
@@ -56,13 +60,21 @@
     </div>
 
     <div id="gui">
-    <div id="top-right-button-wrapper">
-        <div class="toggle-last-stich">
+        <div id="top-right-button-wrapper">
+            <div class="toggle-last-stich">
+            </div>
+            <div class="toggle-scoreboard">
+                Ok so I hate homework and you wanna know why? DO YOU WANNA KNOW WHY? Because homework is work at home.
+                And guess what? GUESS WHAT? My mom won't let me play Minecraft until I finish my homework. SHE WON'T LET
+                ME PLAY MINECRAFT! This is atrocious, because Jack and Nathaniel are online and I can't play with them,
+                and then when I get online they're done. THEIR MOM LETS THEM PLAY MINECRAFT BEFORE HOMEWORK! I hate it
+                so much. I HATE IT! And one time, ohhhh this one time, she caught me playing Minecraft before homework.
+                You know what she did? YOU KNOW WHAT SHE DID? She took away my Xbox for a week. 7 WHOLE DAYS! SHE'S THE
+                WORST MOM EVER! I said, "Mom, let me play! I just crafted my first shovel!" And she didn't care. She did
+                not care. She just hit the stupid off button on the TV. SHE JUST TURNED THE TV OFF AND I LOST MY SHOVEL!
+                I hate homework, and I hate my mom. Ugh.
+            </div>
         </div>
-        <div class="toggle-scoreboard">
-            Ok so I hate homework and you wanna know why? DO YOU WANNA KNOW WHY? Because homework is work at home. And guess what? GUESS WHAT? My mom won't let me play Minecraft until I finish my homework. SHE WON'T LET ME PLAY MINECRAFT! This is atrocious, because Jack and Nathaniel are online and I can't play with them, and then when I get online they're done. THEIR MOM LETS THEM PLAY MINECRAFT BEFORE HOMEWORK! I hate it so much. I HATE IT! And one time, ohhhh this one time, she caught me playing Minecraft before homework. You know what she did? YOU KNOW WHAT SHE DID? She took away my Xbox for a week. 7 WHOLE DAYS! SHE'S THE WORST MOM EVER! I said, "Mom, let me play! I just crafted my first shovel!" And she didn't care. She did not care. She just hit the stupid off button on the TV. SHE JUST TURNED THE TV OFF AND I LOST MY SHOVEL! I hate homework, and I hate my mom. Ugh.
-        </div>
-    </div>
 
         <div id="trumpf"></div>
         <div class="pop-up-window-container" id="score" style="display: none;">
@@ -70,17 +82,17 @@
                 <div class="title-2">Scoreboard</div> <br>
                 <table class="scoretable">
                     <thead>
-                        
+
                     </thead>
                     <tbody></tbody>
                 </table>
             </div>
         </div>
 
-        
+
         <div class="pop-up-window-container" id="last-stich" style="display: none;">
             <div class="pop-up-window" id="last-stich-window">
-                <div class="title-2">Last Stich<br><br></div> 
+                <div class="title-2">Last Stich<br><br></div>
                 <div class="stichtable">
                 </div>
             </div>
@@ -103,7 +115,7 @@
             </div>
         </div>
 
-        <div class="pop-up-window-container" id="lobby-container" >
+        <div class="pop-up-window-container" id="lobby-container">
             <div class="pop-up-window" id="lobby-window">
                 <div class="info-field">
                     <span class="title-2">Waiting For Players</span><br><br>
