add cards to all players

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -14,7 +14,23 @@
     <div id="gamecontent">
         <div class="player2 hand">
             <div class="cardholderwrap">
-                <div class="cardholder"></div>
+                <div class="cardholder">
+                    <div class="card" style="transform: rotate(-57.3333deg);">
+                        <div class="cardimg"></div>
+                    </div>
+                    <div class="card" style="transform: rotate(-28.6667deg);">
+                        <div class="cardimg"></div>
+                    </div>
+                    <div class="card" style="transform: rotate(7.10543e-15deg);">
+                        <div class="cardimg"></div>
+                    </div>
+                    <div class="card" style="transform: rotate(28.6667deg);">
+                        <div class="cardimg"></div>
+                    </div>
+                    <div class="card" style="transform: rotate(57.3333deg);">
+                        <div class="cardimg"></div>
+                    </div>
+                </div>
             </div>
             <div class="namefield"></div>
             <div class="stiche"></div>
@@ -22,7 +38,23 @@
         <div id="innergamecontent">
             <div class="player3 hand">
                 <div class="cardholderwrap">
-                    <div class="cardholder"></div>
+                    <div class="cardholder">
+                        <div class="card" style="transform: rotate(-57.3333deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(-28.6667deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(7.10543e-15deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(28.6667deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(57.3333deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="namefield"></div>
                 <div class="stiche"></div>
@@ -53,7 +85,21 @@
             <div class="player1 hand">
                 <div class="cardholderwrap">
                     <div class="cardholder">
-                        
+                        <div class="card" style="transform: rotate(-57.3333deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(-28.6667deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(7.10543e-15deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(28.6667deg);">
+                            <div class="cardimg"></div>
+                        </div>
+                        <div class="card" style="transform: rotate(57.3333deg);">
+                            <div class="cardimg"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="namefield"></div>
