--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -69,7 +69,7 @@
                                 </div>
                             </form>
                             <div id="matcardwrap">
-                                <div class="card unselectable roesle neun player3" style="">
+                                <div class="card unselectable schelle six player3" style="">
                                     <div class="cardimg"></div>
                                 </div>
                                 <div class="card unselectable roesle zehn player1" style="">
@@ -78,7 +78,7 @@
                                 <div class="card unselectable roesle under player2" style="">
                                     <div class="cardimg"></div>
                                 </div>
-                                <div class="card unselectable roesle under player0" style="">
+                                <div class="card unselectable schelle ace player0" style="">
                                     <div class="cardimg"></div>
                                 </div>
                             </div>
@@ -114,22 +114,22 @@
         <div class="player0 hand">
             <div class="cardholderwrap">
                 <div class="cardholder">
-                    <div class="card schelle under" style="transform: rotate(-61.4286deg);">
+                    <div class="card schelle six" style="transform: rotate(-61.4286deg);">
                         <div class="cardimg"></div>
                     </div>
-                    <div class="card schelle ober" style="transform: rotate(-36.8571deg);">
+                    <div class="card schelle seven" style="transform: rotate(-36.8571deg);">
                         <div class="cardimg"></div>
                     </div>
-                    <div class="card roesle acht" style="transform: rotate(-12.2857deg);">
+                    <div class="card schelle eight" style="transform: rotate(-12.2857deg);">
                         <div class="cardimg"></div>
                     </div>
-                    <div class="card eichel acht" style="transform: rotate(12.2857deg);">
+                    <div class="card schelle nine" style="transform: rotate(12.2857deg);">
                         <div class="cardimg"></div>
                     </div>
-                    <div class="card eichel ober" style="transform: rotate(36.8571deg);">
+                    <div class="card schelle ober" style="transform: rotate(36.8571deg);">
                         <div class="cardimg"></div>
                     </div>
-                    <div class="card eichel koenig" style="transform: rotate(61.4286deg);">
+                    <div class="card schelle ace" style="transform: rotate(61.4286deg);">
                         <div class="cardimg"></div>
                     </div>
                 </div>
