--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -89,21 +89,11 @@
             </div>
             <div class="player1 hand">
                 <div class="cardholderwrap">
-                    <div class="cardholder">
-                        <div class="card" style="transform: rotate(-57.3333deg);">
-                            <div class="cardimg"></div>
-                        </div>
-                        <div class="card" style="transform: rotate(-28.6667deg);">
-                            <div class="cardimg"></div>
-                        </div>
-                        <div class="card" style="transform: rotate(7.10543e-15deg);">
-                            <div class="cardimg"></div>
-                        </div>
-                        <div class="card" style="transform: rotate(28.6667deg);">
-                            <div class="cardimg"></div>
-                        </div>
-                        <div class="card" style="transform: rotate(57.3333deg);">
-                            <div class="cardimg"></div>
+                    <div *ngIf="playersIndexes" class="cardholder">
+                        <div *ngFor="let card of playerCards[playersIndexes[1]].cards">
+                            <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
+                                <div class="cardimg"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +104,7 @@
         <div class="player0 hand">
             <div class="cardholderwrap">
                 <div class="cardholder">
-                    <div *ngFor="let card of playerCards">
+                    <div *ngFor="let card of playerCards[playersIndexes[0]].cards">
                         <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
                             <div class="cardimg"></div>
                         </div>
