--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -12,9 +12,9 @@
 
 <body>
     <div id="gamecontent">
-        <div class="player2 hand">
+        <div *ngIf="playersIndexes.length > 3" class="player2 hand">
             <div class="cardholderwrap">
-                <div *ngIf="playersIndexes.length > 3" class="cardholder">
+                <div class="cardholder">
                     <div *ngFor="let card of playerCards[playersIndexes[3]].cards">
                         <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
                             <div class="cardimg"></div>
@@ -22,13 +22,13 @@
                     </div>
                 </div>
             </div>
-            <div class="namefield"></div>
+            <div class="namefield">{{playerCards[playersIndexes[3]].name}}</div>
             <div class="stiche"></div>
         </div>
         <div id="innergamecontent">
-            <div class="player3 hand">
+            <div *ngIf="playersIndexes.length > 1" class="player3 hand">
                 <div class="cardholderwrap">
-                    <div *ngIf="playersIndexes.length > 2" class="cardholder">
+                    <div class="cardholder">
                         <div *ngFor="let card of playerCards[playersIndexes[2]].cards">
                             <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
                                 <div class="cardimg"></div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="namefield">Denis</div>
+                <div class="namefield">{{playerCards[playersIndexes[1]].name}}</div>
                 <div class="stiche"></div>
             </div>
             <div id="table">
@@ -67,23 +67,23 @@
                     </div>
                 </div>
             </div>
-            <div class="player1 hand">
+            <div *ngIf="playersIndexes.length > 1" class="player1 hand">
                 <div class="cardholderwrap">
-                    <div *ngIf="playersIndexes.length > 1" class="cardholder">
-                        <div *ngFor="let card of playerCards[playersIndexes[1]].cards">
+                    <div class="cardholder">
+                        <div *ngFor="let card of playerCards[playersIndexes[3]].cards">
                             <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
                                 <div class="cardimg"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="namefield"></div>
+                <div class="namefield">{{playerCards[playersIndexes[3]].name}}</div>
                 <div class="stiche"></div>
             </div>
         </div>
-        <div class="player0 hand">
+        <div *ngIf="playersIndexes.length > 0" class="player0 hand">
             <div class="cardholderwrap">
-                <div *ngIf="playersIndexes.length > 0" class="cardholder">
+                <div class="cardholder">
                     <div *ngFor="let card of playerCards[playersIndexes[0]].cards">
                         <div  class="{{card.class}}" [style.transform]="'rotate('+(card.rotation)+'deg)'">
                             <div class="cardimg"></div>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="namefield"></div>
+            <div class="namefield">{{playerCards[playersIndexes[0]].name}}</div>
             <div class="stiche"></div>
         </div>
 
