send turn pass request from angular

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -91,7 +91,11 @@
                     </div>
                 </div>
             </div>
-            <div class="namefield">{{playerCards[playersIndexes[0]].name}}</div>
+            <div class="namefield">
+                <div>{{playerCards[playersIndexes[0]].name}}</div>
+                <button (click)="turnPassed()">Pass</button>
+
+            </div>
             <div class="stiche"></div>
         </div>
 
