display last card selected

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -58,7 +58,7 @@
                                 <div class="card unselectable roesle under player2" style="">
                                     <div class="cardimg"></div>
                                 </div>
-                                <div class="card unselectable schelle ace player0" style="">
+                                <div class="card unselectable {{getCardTypeClass(cardService.lastCard.type)}} {{getCardNumberClass(cardService.lastCard.number)}} player0" style="">
                                     <div class="cardimg"></div>
                                 </div>
                             </div>
