display finished players in angular

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="namefield">{{playerCards[playersIndexes[2]].name}}</div>
+            <div class="namefield">{{playerCards[playersIndexes[2]].name}}{{playerCards[playersIndexes[2]].cards.length == 0 ? " - Finised":""}}</div>
             <div class="stiche"></div>
         </div>
         <div id="innergamecontent">
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="namefield">{{playerCards[playersIndexes[1]].name}}</div>
+                <div class="namefield">{{playerCards[playersIndexes[1]].name}}{{playerCards[playersIndexes[1]].cards.length == 0 ? " - Finised":""}}</div>
                 <div class="stiche"></div>
             </div>
             <div id="table">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="namefield">{{playerCards[playersIndexes[3]].name}}</div>
+                <div class="namefield">{{playerCards[playersIndexes[3]].name}}{{playerCards[playersIndexes[3]].cards.length == 0 ? " - Finised":""}}</div>
                 <div class="stiche"></div>
             </div>
         </div>
